fix covering footer by floater footer

--- a/styles/Footer/Footer.module.scss
+++ b/styles/Footer/Footer.module.scss
@@ -76,6 +76,10 @@ background-color: #202c42;
     background-color: #2e3347;
   }
 }
+
+.footerLowerBlock.paddingEnable {
+  padding: 4px 0 40px;
+}
 .lowerFooter {
   display: flex;
   align-items: center;
